fix: use vertical shift as card hover transform

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -5220,7 +5220,7 @@ body {
     transition: transform 250ms ease-in-out;
   }
   .card__hover:hover, .card__hover:focus, .card__hover:active {
-    transform: scale(1.075);
+    transform: translateY(-1.5rem);
   }
 }
 
